# Cowork

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
cowork/: __main__.py  cli.py  paths.py
cowork/client/: cache.py  conn.py  invite.py  tui.py
cowork/server/: agent_presets.py  agent_runner.py  agent_runtime.py  agents.py  app.py  db.py
cowork/server/migrations/: 0001_initial.sql  0002_agents.sql  0002_member_status.sql  0003_agents.sql
cowork/shared/: protocol.py
docs/: protocol.md
scripts/: verify_live_e2e.py
tests/: conftest.py  test_agent_presets.py  test_agent_reasoning.py  test_agents.py  test_command_registry.py  test_invite_url.py  test_login_command.py  test_scenarios.py  test_smoke.py  test_tui.py
